--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gengar game</title>
 
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     
 <div class="jogo">
 
-<img src="./imagens/ditto-removebg-preview.png" class="ditto">
-<img src="./imagens/gengar feliz.gif" class="happyGengar">
+<img src="./ditto-removebg-preview.png" class="ditto">
+<img src="./gengar feliz.gif" class="happyGengar">
 
 </div>
 
